--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <nav>
-            <a href="#">home</a>
-            <a href="#">profile</a>
+            <a href="#">Home</a>
+            <a href="week02/holygrail.html">Holygrail</a>
         </nav>
     </header>
     <main>
