--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jacques lumingu | WDD130</title>
     <link rel="stylesheet" href="styles/style.css">
+    <meta name="descuption" content="A common layout on  web caller the 'Hely Grail">
+    <meta name="student" content="Jacques lumingu">
 </head>
 <body>
     <header>
         <nav>
-            <a href="#">Home</a>
-            <a href="week02/holygrail.html">Holygrail</a>
+            <a href="#">home</a>
+            <a href="#">profile</a>
         </nav>
     </header>
     <main>
@@ -18,6 +20,12 @@
         <img src="images/profile.jpg" alt="hello, my name is Jacques lumingu" width="200">
         <p>Hello! my is Jacques lumingu i am from DRCongo, haut-katanga i enjoy</p>
     </main>
+    <aside>
+        <h2>Congo</h2>
+        <img src="images/car.jpg" alt="drcongo">
+        <p>
+        </p>
+    </aside>
     <footer>copyright 2025 , Jacques lumingu, haut-katanga, DRCongo</footer>
     
 </body>
