--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
     </main>
     <aside>
         <h2>Congo</h2>
-        <img src="images/car.jpg" alt="drcongo">
+        <img src="images/images.jpeg" alt="drcongo">
         <p>
+            The territory of the Congo was first inhabited by Central African foragers around 90,000 years ago and was settled in the Bantu expansion about 2,000 to 3,000 years ago.
+            [7] In the west, the Kingdom of Kongo ruled around the mouth of the Congo River from the 14th to the 19th century. In the center and east, the empires of Mwene Muji, Luba, and Lunda ruled between the 15th and 19th centuries.
+            These kingdoms were broken up by Europeans during the colonization of the Congo Basin. King Leopold II of Belgium acquired rights to the Congo territory in 1885 and called it the Congo Free State.
+            In 1908, Leopold ceded the territory after international pressure in response to widespread atrocities, and it became a Belgian colony. Congo achieved independence from Belgium in 1960 and was immediately confronted by a series of secessionist movements, the assassination of Prime Minister Patrice Lumumba, and the seizure of power by Mobutu Sese Seko in 1965.
+            Mobutu renamed the country Zaire in 1971 and imposed a personalist dictatorship.
         </p>
     </aside>
     <footer>copyright 2025 , Jacques lumingu, haut-katanga, DRCongo</footer>
